--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
           href="./index.html"
           target="_blank"
           rel="noopener norefferer"
-          class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+          class="logo link"
+          >Web<span class="logo-studio">Studio</span></a
         >
-
+        
         <ul class="site-nav list">
           <li>
             <a href="./index.html" class="link current">Studio</a>
@@ -34,19 +33,19 @@
             <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="./contacts.html" class="link">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="address list">
+      <address class="address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="addr-link"
+            <a href="mailto:info@devstudio.com" class="link addr-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="addr-link"
+            <a href="tel:+110001111111" class="link addr-link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -61,7 +60,7 @@
       </section>
       <!-- Features -->
       <section class="section">
-        <h2 class="section-title">Advantages</h2>
+        <h2 hidden class="section-title">Advantages</h2>
         <ul class="features-list list">
           <li>
             <h3 class="title">Strategy</h3>
@@ -179,9 +178,8 @@
         href="./index.html"
         target="_blank"
         rel="noopener norefferer"
-        class="logo"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
+        class="logo link"
+        >Web<span class="logo-studio">Studio</span></a
       >
       <p class="slogan">
         Increase the flow of customers and sales for your business with digital
