--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,8 @@
           href="./index.html"
           target="_blank"
           rel="noopener norefferer"
-          class="logo"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+          class="logo link"
+          >Web<span class="logo-studio">Studio</span></a
         >
 
         <ul class="site-nav list">
@@ -33,19 +32,19 @@
             <a href="./portfolio.html" class="link current">Portfolio</a>
           </li>
           <li>
-            <a href="./contacts.html" class="link">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
-        <ul class="address list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="addr-link"
+      <address class="address">
+        <ul class="list">
+          <li">
+            <a href="mailto:info@devstudio.com" class="link addr-link"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="addr-link"
+            <a href="tel:+110001111111" class="link addr-link"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -56,17 +55,17 @@
       <!-- Filters -->
 
       <section class="section">
-        <h2 class="section-title">Filters</h2>
+        <h1 hidden>Filters</h1>
 
         <ul class="list">
           <li>
             <button type="button" class="button btn-secondary">All</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">App</button>
+            <button type="button" class="button btn-secondary">Web Site</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">Web Site</button>
+            <button type="button" class="button btn-secondary">App</button>
           </li>
           <li>
             <button type="button" class="button btn-secondary">Design</button>
@@ -79,8 +78,8 @@
         </ul>
       </section>
       <!-- Our projects -->
-      <section class="section">
-        <h2 class="section-title">Our projects</h2>
+      
+        <h2 hidden class="section-title">Our projects</h2>
         <ul class="projects-list list">
           <li>
             <a href=""
@@ -193,7 +192,7 @@
             </a>
           </li>
         </ul>
-      </section>
+      
     </main>
 
     <!-- Footer -->
@@ -203,9 +202,8 @@
         href="./index.html"
         target="_blank"
         rel="noopener norefferer"
-        class="logo"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
+        class="logo link"
+        >Web<span class="logo-studio">Studio</span></a
       >
       <p class="slogan">
         Increase the flow of customers and sales for your business with digital
