--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul class="features-list list">
           <li>
             <h3 class="title">Strategy</h3>
-            <p>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
