--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,30 @@
     <main>
       <!-- Filters -->
 
-      <section class="section">
         <h1 hidden>Filters</h1>
 
         <ul class="list">
           <li>
-            <button type="button" class="button btn-secondary">All</button>
+            <button type="button" class="button btn-secondary link">All</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">Web Site</button>
+            <button type="button" class="button btn-secondary link">Web Site</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">App</button>
+            <button type="button" class="button btn-secondary link">App</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">Design</button>
+            <button type="button" class="button btn-secondary link">Design</button>
           </li>
           <li>
-            <button type="button" class="button btn-secondary">
+            <button type="button" class="button btn-secondary link">
               Marketing
             </button>
           </li>
         </ul>
       </section>
       <!-- Our projects -->
-      
+      <section class="section">
         <h2 hidden class="section-title">Our projects</h2>
         <ul class="projects-list list">
           <li>
@@ -192,7 +191,7 @@
             </a>
           </li>
         </ul>
-      
+      </section>
     </main>
 
     <!-- Footer -->
