--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         
         <ul class="site-nav list">
           <li>
-            <a href="./index.html" class="link current">Studio</a>
+            <a href="./index.html" class="nav-menu link current">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link">Portfolio</a>
+            <a href="./portfolio.html" class="nav-menu link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link">Contacts</a>
+            <a href="" class="nav-menu link">Contacts</a>
           </li>
         </ul>
       </nav>
