--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
 
         <ul class="site-nav list">
           <li>
-            <a href="./index.html" class="link">Studio</a>
+            <a href="./index.html" class="nav-menu link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="link current">Portfolio</a>
+            <a href="./portfolio.html" class="nav-menu link current">Portfolio</a>
           </li>
           <li>
-            <a href="" class="link">Contacts</a>
+            <a href="" class="nav-menu link">Contacts</a>
           </li>
         </ul>
       </nav>
