--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </li>
           <li>
             <h3 class="title">Punctuality</h3>
-            <p>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
@@ -85,7 +85,7 @@
           </li>
           <li>
             <h3 class="title">Technologies</h3>
-            <p>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
