--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         
         <ul class="site-nav list">
           <li>
-            <a href="./index.html" class="nav-menu link current">Studio</a>
+            <a href="./index.html" class="nav-menu link">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html" class="nav-menu link">Portfolio</a>
