--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </li>
           <li>
             <h3 class="title">Diligence</h3>
-            <p>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
