--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
             <a href="./index.html" class="nav-menu link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-menu link current">Portfolio</a>
+            <a href="./portfolio.html" class="nav-menu link">Portfolio</a>
           </li>
           <li>
             <a href="" class="nav-menu link">Contacts</a>
