--- a/portfolio.html
+++ b/portfolio.html
@@ -24,15 +24,15 @@
           >Web<span class="logo-studio">Studio</span></a
         >
 
-        <ul class="site-nav list">
+        <ul class="list">
           <li>
-            <a href="./index.html" class="nav-menu link">Studio</a>
+            <a href="./index.html" class="nav-menu-portfolio link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-menu link">Portfolio</a>
+            <a href="./portfolio.html" class="nav-menu-portfolio link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="nav-menu link">Contacts</a>
+            <a href="" class="nav-menu-portfolio link">Contacts</a>
           </li>
         </ul>
       </nav>
