hw2 header portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,19 +26,19 @@
 
         <ul class="list">
           <li>
-            <a href="./index.html" class="nav-menu-portfolio link">Studio</a>
+            <a href="./index.html" class="navmenu-portfolio link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-menu-portfolio link">Portfolio</a>
+            <a href="./portfolio.html" class="navmenu-portfolio link">Portfolio</a>
           </li>
           <li>
-            <a href="" class="nav-menu-portfolio link">Contacts</a>
+            <a href="" class="navmenu-portfolio link">Contacts</a>
           </li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
-          <li">
+          <li>
             <a href="mailto:info@devstudio.com" class="link addr-link"
               >info@devstudio.com</a
             >
