--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           >Web<span class="logo-studio">Studio</span></a
         >
 
-        <ul class="list">
+        <ul class="nav-portfolio list">
           <li>
             <a href="./index.html" class="navmenu-portfolio link">Studio</a>
           </li>
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <address class="address">
+      <address class="address-portfolio">
         <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" class="addr-link-portfolio link"
