--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
           >Web<span class="logo-studio">Studio</span></a
         >
 
-        <ul class="nav-portfolio list">
+        <ul class="list">
           <li>
             <a href="./index.html" class="navmenu-portfolio link">Studio</a>
           </li>
