--- a/portfolio.html
+++ b/portfolio.html
@@ -97,8 +97,9 @@
                 alt="Cashless Payment"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Cashless Payment</h3>
+              <h2 class="title">Cashless Payment</h2>
               <p class="type">Marketing</p>
             </a>
           </li>
@@ -109,8 +110,9 @@
                 alt="Meditation App"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Meditation App</h3>
+              <h2 class="title">Meditation App</h2>
               <p class="type">App</p>
             </a>
           </li>
@@ -122,8 +124,9 @@
                 alt="Taxi Service"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Taxi Service</h3>
+              <h2 class="title">Taxi Service</h2>
               <p class="type">Marketing</p>
             </a>
           </li>
@@ -134,8 +137,9 @@
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Screen Illustrations</h3>
+              <h2 class="title">Screen Illustrations</h2>
               <p class="type">Design</p>
             </a>
           </li>
@@ -146,8 +150,9 @@
                 alt="Online Courses"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Online Courses</h3>
+              <h2 class="title">Online Courses</h2>
               <p class="type">Marketing</p>
             </a>
           </li>
@@ -159,8 +164,9 @@
                 alt="Instagram Stories Concept"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Instagram Stories Concept</h3>
+              <h2 class="title">Instagram Stories Concept</h2>
               <p class="type">Design</p>
             </a>
           </li>
@@ -171,8 +177,9 @@
                 alt="Organic Food"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Organic Food</h3>
+              <h2 class="title">Organic Food</h2>
               <p class="type">Web Site</p>
             </a>
           </li>
@@ -183,8 +190,9 @@
                 alt="Fresh Coffee"
                 width="360"
                 height="300"
+                class="link"
               />
-              <h3 class="title">Fresh Coffee</h3>
+              <h2 class="title">Fresh Coffee</h2>
               <p class="type">Web Site</p>
             </a>
           </li>
