--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <!-- Our team -->
 
-      <section class="section">
+      <section class="section our-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
           <li>
@@ -134,6 +134,7 @@
               alt="Mark Guerrero Product Designer"
               width="264"
               height="380"
+              class="team-foto"
             />
             <h3 class="title name">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
@@ -144,6 +145,7 @@
               alt="Tom Ford Frontend Developer"
               width="264"
               height="380"
+              class="team-foto"
             />
             <h3 class="title name">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
@@ -154,6 +156,7 @@
               alt="Camila Garcia Marketing"
               width="264"
               height="380"
+              class="team-foto"
             />
             <h3 class="title name">Camila Garcia</h3>
             <p class="position">Marketing</p>
@@ -164,6 +167,7 @@
               alt="Daniel Wilson UI Designer"
               width="264"
               height="380"
+              class="team-foto"
             />
             <h3 class="title name">Daniel Wilson</h3>
             <p class="position">UI Designer</p>
