--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
                 height="300"
                 
               />
-              <h2 class="title link">Banking App Interface Concept</h2>
+              <h2 class="title">Banking App Interface Concept</h2>
               <p class="type">App</p>
             </a>
           </li>
