--- a/index.html
+++ b/index.html
@@ -129,28 +129,33 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="team-list list">
           <li>
-            <img
+            <div class="team-foto">
+              <img
               src="./images/img-4.jpg"
               alt="Mark Guerrero Product Designer"
               width="264"
               height="380"
-              class="team-foto"
+              
             />
             <h3 class="title name">Mark Guerrero</h3>
             <p class="position">Product Designer</p>
+          </div>
           </li>
           <li>
+            <div class="team-foto">
             <img
               src="./images/img-5.jpg"
               alt="Tom Ford Frontend Developer"
               width="264"
               height="380"
-              class="team-foto"
+              
             />
             <h3 class="title name">Tom Ford</h3>
             <p class="position">Frontend Developer</p>
+          </div>
           </li>
           <li>
+            <div class="team-foto">
             <img
               src="./images/img-6.jpg"
               alt="Camila Garcia Marketing"
@@ -160,8 +165,10 @@
             />
             <h3 class="title name">Camila Garcia</h3>
             <p class="position">Marketing</p>
+          </div>
           </li>
           <li>
+            <div class="team-foto">
             <img
               src="./images/img-7.jpg"
               alt="Daniel Wilson UI Designer"
@@ -171,6 +178,7 @@
             />
             <h3 class="title name">Daniel Wilson</h3>
             <p class="position">UI Designer</p>
+          </div>
           </li>
         </ul>
       </section>
