--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <p class="position">Product Designer</p>          
           </li>
 
-          <li>
+          <li class="team-foto">
               <img
               src="./images/img-5.jpg"
               alt="Tom Ford Frontend Developer"
@@ -152,7 +152,7 @@
             <p class="position">Frontend Developer</p>          
           </li>
 
-          <li>            
+          <li class="team-foto">            
             <img
               src="./images/img-6.jpg"
               alt="Camila Garcia Marketing"
@@ -164,7 +164,7 @@
             <p class="position">Marketing</p>          
           </li>
 
-          <li>            
+          <li class="team-foto">            
             <img
               src="./images/img-7.jpg"
               alt="Daniel Wilson UI Designer"
